<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:gravity="center"
        android:textSize="50sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/et_name"
        android:autofillHints="username"
        android:hint="@string/et_name_hint"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start"
        android:backgroundTint="@color/black"
        android:text="@string/btn_start_text"
        />


</LinearLayout>